# flexi

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  CMakeListsCompiler.txt  CMakeListsLib.txt  CMakeListsMachine.txt  CMakePresets.json  CONTRIBUTORS.md  INSTALL.md  LICENSE.md  README.md  REFERENCE.md  REGGIE.md  fpm.toml  generate_userblock.sh
posti/: CMakeLists.txt
posti/analyze_hit/: CMakeLists.txt  analyze_hit.f90  analyze_hit_vars.f90  fft.f90  posti_analyze_hit.f90
posti/avg2D/: CMakeLists.txt  posti_avg2D.f90
posti/channel_fft/: CMakeLists.txt  channel_fft.f90  fft.f90  fft_vars.f90  posti_channel_fft.f90
posti/common/fftw/: fftw.f90
posti/common/newton/: newton.f90
posti/common/spline/: spline.f90
posti/common/vtkOutput/: vtkStructuredOutput.f90
posti/dmd/: CMakeLists.txt  dmd.f90  dmd_vars.f90  posti_dmd.f90
posti/dmd/navierstokes/: equationDmd.f90  equationDmd_vars.f90
posti/filter_hit/: CMakeLists.txt  fft.f90  filter_hit.f90  filter_hit_vars.f90  posti_filter_hit.f90
posti/hit/: CMakeLists.txt
posti/hit/analyze_hit/: CMakeLists.txt  analyze_hit.f90  analyze_hit_vars.f90  posti_analyze_hit.f90
posti/hit/fft/: fft.f90  fft_vars.f90
posti/hit/filter_hit/: CMakeLists.txt  filter_hit.f90  filter_hit_vars.f90  posti_filter_hit.f90
posti/hit/hit_analyze/: CMakeLists.txt  hit_analyze.f90  hit_analyze_vars.f90  posti_hit_analyze.f90
posti/hit/hit_filter/: CMakeLists.txt  hit_filter.f90  hit_filter_vars.f90  posti_hit_filter.f90
posti/hit/hit_init/: CMakeLists.txt  hit_init.f90  hit_init_vars.f90  posti_hit_init.f90
posti/hit/init_hit/: CMakeLists.txt  init_hit.f90  init_hit_vars.f90  posti_init_hit.f90
posti/hit/shared/: fft.f90  fft_vars.f90
posti/init_hit/: CMakeLists.txt  fft.f90  init_hit.f90  init_hit_vars.f90
posti/mergetimeaverages/: CMakeLists.txt  calcfluc.f90  timeavg.f90
posti/recordpoints/evaluate/: CMakeLists.txt  evaluaterecordpoints.f90
posti/recordpoints/prepare/: CMakeLists.txt  blprojection.f90  hdf5_outputrp.f90  parameters.f90  parametriccoords.f90  preparerecordpoints.f90  rpset.f90  rpset_vars.f90  spline.f90  visurp.f90
posti/recordpoints/visualize/: CMakeLists.txt  filterrp.f90  parameters.f90  visualizerecordpoints.f90
posti/swapmesh/: CMakeLists.txt  interpolatesolution.f90  parametriccoords.f90  posti_swapmesh.f90  swapmesh.f90  swapmesh_vars.f90
posti/to3D/: CMakeLists.txt  posti_to3D.f90
posti/toDG/: CMakeLists.txt  toDG.f90
posti/visu/: CMakeLists.txt  avg2d.f90  calc.f90  converttovisu.f90  mappings.f90  pluginTypes_visu.h  pluginTypes_visu3D.h  plugin_visu.h  plugin_visu3D.h  posti_visu.f90  posti_visu3D.f90  readstate.f90  visu.f90  visu3D.f90  visu3D_Cwrapper.f90  visu3D_vars.f90  visu_Cwrapper.f90  visu_init.f90  visu_mesh.f90  visu_state.f90  visu_vars.f90  visumesh.f90
posti/visu/avg2d/: avg2d.f90
posti/visu/io_hdf5/: visu_hdf5_output.f90
posti/visu/mesh/: mesh.f90
posti/visu/paraviewReader/: CMakeLists.txt  visu3DReader.cxx  visu3DReader.h  visu3DReader.xml  visuReader.cxx  visuReader.h  visuReader.plugin  visuReader.xml
posti/walldistance/: CMakeLists.txt  posti_walldistance.f90  walldistance.f90  walldistance_vars.f90
regressioncheck/dummy_basedir/: CMakeLists.txt  dummy.f90
src/: CMakeLists.txt  commit.h  flexi.f90  flexi.h  flexi2vtk.f90  flexilib.f90  mpi.h
src/analyze/: analyze.f90  analyze_vars.f90  benchmarking.f90
src/areas/: areas.f90  areas_vars.f90
src/avg2d/: avg2d.f90  avg2d_vars.f90
src/baseflow/: baseflow.f90  baseflow_filter.f90  baseflow_readin.f90  baseflow_vars.f90
src/dg/: dg.f90  dg_vars.f90  fillflux.f90  overintegration.f90  overintegration_vars.f90  surfint.f90  surfint.t90  volint.f90
src/dg/br1/: br1.f90  br1_fillflux.f90  br1_surfint.f90  br1_vars.f90  br1_volint.f90
src/dg/br2/: br2.f90  br2_fillflux.f90  br2_surfint.f90  br2_vars.f90  br2_volint.f90
src/dg/lifting/: lifting.f90  lifting_br1.t90  lifting_br2.t90  (+3 more)
src/filter/: filter.f90  filter_vars.f90  pplimiter.f90
src/fv/: fv.f90  fv_basis.f90  fv_blending.f90  fv_limiter.f90  fv_metrics.f90  fv_mortar.f90  fv_prolongtoface.f90  fv_reconstruction.f90  fv_switching.f90  fv_vars.f90  fv_volint.f90
src/globals/: 2d.f90  commandlinearguments.f90  globals.f90  globals_vars.f90  lapack.f90  mathtools.f90  preprocessing.f90  stacksize.c  vector.f90
src/implicit/: implicit.f90  implicit_vars.f90  predictor.f90
src/indicator/: indicator.f90  indicator_vars.f90
src/interpolation/: applyjacobian.f90  applyjacobian.t90  basis.f90  changeBasis.f90  changeBasis.t90  interpolation.f90  interpolation_vars.f90  prolongtoface.f90  prolongtoface.t90
src/io_hdf5/: hdf5_input.f90  hdf5_output.f90  io_hdf5.f90
src/mesh/: debugmesh.f90  mappings.f90  mesh.f90  mesh_readin.f90  mesh_vars.f90  metrics.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90  fillmortar.t90  mortar.f90  mortar_metrics.f90  mortar_vars.f90
src/mpi/: mpi.f90  mpi_vars.f90
src/output/: output.f90  output_vars.f90  output_vtk.f90  print_userblock.c  read_userblock.c  read_userblock_dummy.c
src/posti/: calc.f90  converttovisu.f90  mappings.f90  plugin_visu3D.h  posti.f90  posti_calc.f90  posti_converttovisu.f90  posti_mappings.f90  posti_plugin.h  posti_readstate.f90  posti_statistics.f90  posti_vars.f90  posti_visumesh.f90  readstate.f90  visu3D.f90  visu3D_vars.f90  visumesh.f90
src/precond/: precond.f90  precond_vars.f90  sparse_ilu.f90  sparse_ilu_vars.f90
src/readintools/: isovaryingstring.f90  options.f90  readintools.f90  stringtools.f90
src/recordpoints/: recordpoints.f90  recordpoints_vars.f90
src/restart/: restart.f90  restart_vars.f90
src/sponge/: pruettdamping.f90  sponge.f90  sponge_vars.f90
src/timedisc/: timedisc.f90  timedisc_func.f90  timedisc_vars.f90  timestep.f90
unitTests/: CMakeLists.txt  ChangeBasis.f90  DerivativeMatrix.f90  MatrixInverse.f90  NodesAndWeights.f90  ProlongToFace.f90  ReadInTools.f90  ReadInTools.ini  SurfInt.f90  Vandermonde.f90  generateunittestreferencedata.f90  parameter.ini  parameter_hopr.ini  unittest.f90  unittest_vars.f90
(+912 files in other folders)
